--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "github": {"silent": true}
+  "github": { "silent": true },
+  "rewrites": [{ "source": "/", "destination": "/index.html" }]
 }
